# blackterm_phishscan

./: .env  README.MD  README.md  dns_lookup.py  html_reporter.py  ip_lookup.py  main.py  pyproject.toml  reporter.py  requirements.txt  scanner.py  scoring.py  screenshotter.py  ssl_checker.py  threat_summary.py  virustotal.py  whois_lookup.py
blackterm_phishscan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reports/: youtube.com_20260701_201734.json  youtube.com_20260701_202209.json  youtube.com_20260701_203119.json  youtube.com_20260701_203458.html  youtube.com_20260701_203458.json  youtube.com_20260701_204000.html  youtube.com_20260701_204000.json  youtube.com_20260701_204147.html  youtube.com_20260701_204147.json  youtube.com_20260701_204631.html  youtube.com_20260701_204631.json  youtube.com_20260701_205047.json  youtube.com_20260701_205214.html  youtube.com_20260701_205214.json  youtube.com_20260701_205637.html  youtube.com_20260701_205637.json  youtube.com_20260701_210121.html  youtube.com_20260701_210121.json  youtube.com_20260701_210722.html  youtube.com_20260701_210722.json  youtube.com_20260701_211004.html  youtube.com_20260701_211004.json  youtube.com_20260701_211154.html  youtube.com_20260701_211154.json  youtube.com_20260701_211426.html  youtube.com_20260701_211426.json  youtube.com_20260701_211642.html  youtube.com_20260701_211642.json  youtube.com_20260701_212527.html  youtube.com_20260701_212527.json
